# Snoppy-Windows

./: .gitignore  CMakeLists.txt  README.md
src/: FFmpegDecoder.cpp  FFmpegDecoder.h  LayeredVideoWindow.cpp  LayeredVideoWindow.h  ScreenSaverApp.cpp  ScreenSaverApp.h  VideoPlaylist.cpp  VideoPlaylist.h  main.cpp
